--- a/web/robotjs/package.json
+++ b/web/robotjs/package.json
@@ -5,9 +5,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "4.10.1",
     "morgan": "1.4.1",
-    "ws": "0.4.32",
-    "serialport":"2.0.2"
+    "serialport": "2.0.2",
+    "ws": "0.4.32"
   }
 }
